# ev-recharge-python-sdk

./: README.md  pyproject.toml  requirements.txt
doc/: client.md  environment-based-client-initialization.md
doc/auth/: oauth-2-client-credentials-grant.md
doc/controllers/: charging.md  locations.md  o-auth-authorization.md
doc/models/: accessibility-status-enum.md  accessibility-v2.md  active-response-200-json-status-enum.md  active-response-200-json.md  address.md  bad-request-err-msg.md  bad-request-exception.md  charge-error.md  charge-retrieve-state.md  chargesession-start-body.md  connector-types-enum.md  connector-v2.md  connector-vo-connector-type-enum.md  connector-vo-updated-by-enum.md  connector-vo.md  coordinates-1.md  coordinates.md  data-active.md  data-retrieve.md  day-of-week-enum.md  electrical-properties-power-type-enum.md  electrical-properties-v2.md  electrical-properties.md  evse-status-enum.md  evse-v2.md  evse-vo-authorization-methods-enum.md  evse-vo-status-enum.md  evse-vo.md  get-charge-session-retrieve-response-200-json-status-enum.md  get-charge-session-retrieve-response-200-json.md  get-ev-locations-authorization-methods-enum.md  get-ev-locations-connector-types-enum.md  get-ev-locations-evse-status-enum.md  http401-error-response-exception.md  inline-response-202-data.md  inline-response-202-status-enum.md  inline-response-202.md  inline-response-2021-status-enum.md  inline-response-2021.md  internal-error-object.md  (+73 more)
shellev/: __init__.py  configuration.py  shellev_client.py
shellev/controllers/: __init__.py  charging_controller.py  locations_controller.py  o_auth_authorization_controller.py
shellev/exceptions/: __init__.py  api_exception.py  bad_request_exception.py  http_401_error_response_exception.py  internal_server_error_exception.py  m_400_error_response_error_1_exception.py  m_401_error_response_error_1_exception.py  m_404_error_response_error_1_exception.py  m_405_error_response_error_1_exception.py  m_429_error_response_error_1_exception.py  m_500_error_response_error_1_exception.py  m_503_error_response_error_1_exception.py  not_found_exception.py  (+7 more)
tests/: http_response_catcher.py
(+123 files in other folders)
