[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "ev-recharge-sdk"
description = "This API Product provides the option to manage charging at all public Shell Recharge locations. The end points provides control to start, stop and get status of the charging session."
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["EV", "Charging", "Shell", "APIMatic", "SDK", "APIs", "Recharge", "locations"]
authors = [{name = "developer sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://developer.shell.com/product-catalog/shell-recharge/sdk#/http/setting-up-sdks"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.15", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6", "jsonschema~=3.2.0"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
